bk_ida/gccida/g1/constrain_operands
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2792:4: error: expected ';' after expression
rtx v13; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2792:5: error: use of undeclared identifier 'v13'
rtx v13; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2793:4: error: expected ';' after expression
rtx v14; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2793:5: error: use of undeclared identifier 'v14'
rtx v14; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2816:4: error: expected ';' after expression
rtx v37; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2816:5: error: use of undeclared identifier 'v37'
rtx v37; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2819:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+18h] [rbp-330h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2829:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands && recog_data_0.n_alternatives ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2829:33: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands && recog_data_0.n_alternatives ) 
                                ^~~~~~~~~~~~
                                recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2831:14: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
n_operands = recog_data_0.n_operands; 
             ^~~~~~~~~~~~
             recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2832:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2837:19: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
constraints[v3] = recog_data_0.constraints[v3]; 
                  ^~~~~~~~~~~~
                  recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2842:9: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
while ( recog_data_0.n_operands > 0 ) 
        ^~~~~~~~~~~~
        recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2849:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
rtx = recog_data_0.operand[v30]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2858:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v4.rtwint = ( __int64)rtx->fld[0]; 
                      ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2865:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v4.rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2867:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)rtx + 2)); 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2931:1: error: use of undeclared identifier 'v13'
v13 = recog_data_0.operand[v11]; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:2931:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v13 = recog_data_0.operand[v11]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/constrain_operands/src/obj/recog.o] Error 1
